# vantix

./: .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: CI.yml
benchmarks/: benchmark_throughput.py  benchmark_training.py  compare_speed.py  prepare_data.py
python/vantix/: __init__.py
python/vantixloader/: __init__.py  loader.py
scripts/: benchmark.py
src/: lib.rs
tests/: test_loader.py
vantix/: __init__.py  loader.py
