[package]
name = "vantix"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_vantix"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
image = "0.25"
rayon = "1.8"
fast_image_resize = "5.0"
rand = "0.8"
