[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "vantix"
version = "0.1.0"
description = "A blazingly fast Rust-powered image loader for Python."
readme = "README.md"
authors = [
    {name = "Carl Kemmerich"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "pandas>=2.0.3",
    "pytest>=8.3.5",
    "ruff>=0.15.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
]

[tool.maturin]
python-source = "python"
module-name = "vantix.vantix_core"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
